@@ -1,5 +1,9 @@
 2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineCellRenderer.cpp: 
+
+2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* home.wrl:
 	* X3DBrowserEditor.cpp:
 	* OutlineTreeModel.cpp:
